# MarkovChainHS

./: MarkovChain.cabal  README.md
.github/workflows/: build.yml
app/: Main.hs
src/: Markov.hs
