cabal-version:      2.4
name:               MarkovChain
version:            0.1.0.0

-- The license under which the package is released.
license: MIT
author: thinker227

-- A copyright notice.
copyright: (c) thinker227 2022

library
    exposed-modules: Markov

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable MarkovChain
    main-is: Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        random ^>= 1.2.1.1,
        MarkovChain

    hs-source-dirs:   app
    default-language: Haskell2010
